force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Activate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Activate__c</fullName>
    <description>Indicator to activate the agreement</description>
    <formula>OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Signatures"), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Filing"), AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Authoring"),ISPICKVAL(Apttus__AgreementId__r.Apttus__Source__c,"Other Party Paper")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to activate the agreement</inlineHelpText>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>