force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Generate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Generate__c</fullName>
    <description>Indicator to generate agreement documents</description>
    <formula>ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, "Request")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to generate agreement documents</inlineHelpText>
    <label>Generate</label>
    <type>Checkbox</type>
</CustomField>