force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__ImportOfflineDocument__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ImportOfflineDocument__c</fullName>
    <description>Indicator to import offline documents</description>
    <formula>NOT(OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, "In Effect"), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, "Expired"),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, "Terminated"),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, "Amended"),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, "Cancelled")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to import offline documents</inlineHelpText>
    <label>Import Offline Document</label>
    <type>Checkbox</type>
</CustomField>