force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Preview__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Preview__c</fullName>
    <formula>ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, "Request")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview</label>
    <type>Checkbox</type>
</CustomField>