force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__ReturnToRequestor__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReturnToRequestor__c</fullName>
    <description>Indicator to return the agreement back to requestor</description>
    <formula>ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Authoring")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to return the agreement back to requestor</inlineHelpText>
    <label>Return To Requestor</label>
    <type>Checkbox</type>
</CustomField>