force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__SendForReview__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SendForReview__c</fullName>
    <description>Indicator to send agreement for review</description>
    <formula>OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Signatures"), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Authoring"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to send agreement for review</inlineHelpText>
    <label>Send For Review</label>
    <type>Checkbox</type>
</CustomField>