force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__SubmitChanges__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SubmitChanges__c</fullName>
    <description>Indicator to submit agreement changes</description>
    <formula>OR(AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Authoring"),ISPICKVAL(Apttus__AgreementId__r.Apttus__Source__c,"Other Party Paper")),(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Signatures")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to submit agreement changes</inlineHelpText>
    <label>Submit Changes</label>
    <type>Checkbox</type>
</CustomField>