force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__SubmitRequest__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SubmitRequest__c</fullName>
    <description>Indicator to submit agreement request</description>
    <formula>AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"Request"),OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,"Request"),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,"In Amendment"),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,"In Renewal"),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to submit agreement request</inlineHelpText>
    <label>Submit Request</label>
    <type>Checkbox</type>
</CustomField>