force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Terminate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Terminate__c</fullName>
    <description>Indicator to terminate the agreemen</description>
    <formula>OR(AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,"In Effect"),NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,"Being Amended")), NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,"Being Renewed"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to terminate the agreemen</inlineHelpText>
    <label>Terminate</label>
    <type>Checkbox</type>
</CustomField>